add s3 in register, updateCurrentUserData, getCurrentUserData
